Updated apache config with proxy pass reverse

--- a/config/livepublication-portal.conf
+++ b/config/livepublication-portal.conf
@@ -5,8 +5,10 @@
 
 
         ServerName orchestration-ui.livepup-globus.cloud.edu.au
+	ProxyPreserveHost On
         ProxyPass / http://localhost:8000/
-
+	ProxyPassReverse / http://localhost:8000/
+	RequestHeader set X-Forwarded-Proto "https"
         #<Directory /home/ubuntu/LivePublication-Globus-Portal>
         #<Files wsgi.py>
         #Require all granted
